# test_project

./: .flake8  pyproject.toml
src/: decorators.py  generators.py  logger.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_processing.py  test_utils.py  test_widget.py
